# ohtu-2021-viikko1

./: .coveragerc  .gitignore  .pylintrc  README.md  koe.txt  koe2.txt  pyproject.toml  tiedosto2.txt
.github/workflows/: main.yml
hakemisto2/: tiedosto1.txt  tiedosto2.txt
src/: index.py  varasto.py
src/tests/: varasto_test.py
