[tool.poetry]
name = "varasto"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
autopep8 = "^1.5.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.5"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
